sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value getmondeValeurs
  while (i != getmondeValeurs() ){
              ^AlgBubbleSort1:8: error: not found: value getmondeValeurs
    while (c != getmondeValeurs()-1){
                ^