sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i=0
  while (i != getmondeValeurs() ){
    i+=1
    var c=0
    var nombre=getValeur(0)
    while (c != getmondeValeurs()-1){
      if (plusPetit(nombre,c)){
        c+=1
        echange(c,c+1)
      } 
      else {
        nombre=getValeur(c)
      }
    }
  }
}